@@ -46,7 +46,7 @@ public interface Constants {
   /** Default port region server listens on. */
   public static final int DEFAULT_PEER_PORT = 61000;
 
-  public static final long ATLEAST_WAIT_TIME = 100;
+  public static final long ATLEAST_WAIT_TIME = 1000;
   public static final String PEER_ID = "bsp.peer.id";
   
   /** Parameter name for what groom server implementation to use. */
